--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Solminder",
-  "short_name": "Solminder",
-  "description": "Smart HR Management",
+  "name": "Dawami",
+  "short_name": "Dawami",
+  "description": "Smart Attendance & HR Management",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#fdfaed",
