--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
     "genkit": "^1.27.0",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.475.0",
     "next": "15.0.7",
     "patch-package": "^8.0.0",
